# libOTe

./: CMakeLists.txt  compile.sh
libOTe/TwoChooseOne/: OTExtInterface.cpp  OTExtInterface.h
netio__/: CMakeLists.txt  netio_test.cpp
